[package]
name = "codexdaemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
libc = "0.2.186"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
